--- a/app/assets/stylesheets/api/header.scss
+++ b/app/assets/stylesheets/api/header.scss
@@ -58,6 +58,57 @@ header {
             
         }
 
+        #profile-links-container {
+            display: flex;
+            align-items: center;
+
+            > div {
+                color: rgb(73, 73, 73);
+                font-size: 20px;
+                font-weight: bold;
+            }
+
+            > img {
+                transition: transform 0.2s;
+            }
+            
+            > img:hover {
+                opacity: 0.75;
+                transform: scale(0.9);
+            }
+
+            > menu {
+                position: absolute;
+                top: 50px;
+                right: 10px;
+                background-color: white;
+                box-shadow: 0 0 15px 0.2px rgb(231, 231, 231);
+                border-radius: 15px;
+                height: 150px;
+                width: 130px;
+                display: flex;
+                flex-direction: column;
+                justify-content: space-around;
+                align-items: left;
+
+                > a {
+                    color: rgb(148, 148, 148);
+                    font-family: Arial, Helvetica, sans-serif;
+                    font-weight: 5;
+                    font-size: 20px;
+                    padding: 15px;
+                }
+
+                > a:hover {
+                    background-color: rgb(245, 245, 245);;
+                    border-radius: 10px;
+                    color: #428a13;
+                }
+                
+            }
+            
+        }
+
     }
 
 }
