--- a/app/assets/stylesheets/api/header.scss
+++ b/app/assets/stylesheets/api/header.scss
@@ -8,6 +8,7 @@ header {
         height: 65px;
         font-weight: bold;
         font-family: Arial, Helvetica, sans-serif;
+        background-color: white;
         box-shadow: 0 0 1px 0px rgb(211, 211, 211);
         position: fixed;
         top: 0;
