--- a/app/assets/stylesheets/api/session_form.scss
+++ b/app/assets/stylesheets/api/session_form.scss
@@ -1,6 +1,13 @@
 #session-page {
 
-    margin-top: 65px;
+    height: 100vh;
+    background-image: url("session_page.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
 
     > #session-form {
         background-color: white;
@@ -12,8 +19,6 @@
         width: 420px;
         height: 420px;
         box-shadow: 0 0 15px 0.2px rgb(211, 211, 211);
-        // margin: auto;
-        // margin-top: 10%;
 
         > h3 {
             font-family: Arial, Helvetica, sans-serif;
