Add pointer to buttons

--- a/app/assets/stylesheets/api/session_form.scss
+++ b/app/assets/stylesheets/api/session_form.scss
@@ -79,6 +79,7 @@
 
             > button:hover {
                 opacity: 0.85;
+                cursor: pointer;
             }
             
         }
