--- a/app/assets/stylesheets/api/session_form.scss
+++ b/app/assets/stylesheets/api/session_form.scss
@@ -61,6 +61,11 @@
                 font-size: 12px;
                 font-family: Arial, Helvetica, sans-serif;
                 margin-left: 15px;
+
+                > li {
+                    list-style: none;
+                }
+                
             }
 
             > button {
