Change img file paths due to new public file structure

--- a/app/assets/stylesheets/api/session_form.scss
+++ b/app/assets/stylesheets/api/session_form.scss
@@ -1,7 +1,7 @@
 #session-page {
 
     height: 100vh;
-    background-image: url("session_page.jpg");
+    background-image: url("/session_images/session_page.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
