--- a/app/assets/stylesheets/api/session_form.scss
+++ b/app/assets/stylesheets/api/session_form.scss
@@ -1,7 +1,6 @@
 #session-page {
 
     height: 100vh;
-    background-image: url("/session_images/signup.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -108,4 +107,12 @@
 
     }
 
+}
+
+.signup-page {
+    background-image: url("/session_images/signup.jpg");
+}
+
+.signin-page {
+    background-image: url("/session_images/signin.jpg");
 }
