--- a/app/assets/stylesheets/api/header.scss
+++ b/app/assets/stylesheets/api/header.scss
@@ -114,7 +114,7 @@ header {
                 }
 
                 > a:hover {
-                    background-color: rgb(245, 245, 245);;
+                    background-color: rgb(245, 245, 245);
                     color: #428a13;
                 }
 
