--- a/app/assets/stylesheets/api/home.scss
+++ b/app/assets/stylesheets/api/home.scss
@@ -9,6 +9,8 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        position: relative;
+        z-index: 0;
        
         animation: switchImg infinite 60s ease-in-out;
 
@@ -38,7 +40,7 @@
 
         #search-bar {
             position: relative;
-            z-index: 0;
+            z-index: 2;
             background-color: white;
             display: flex;
             align-items: center;
@@ -47,6 +49,7 @@
             height: 72px;
             width: 644px;
             border-radius: 40px;
+            box-shadow: 0px 10px 20px 0px rgba(120, 120, 120, 0.3);
 
             > img:first-child {
                 height: 22px;
@@ -66,59 +69,60 @@
                 outline: none;
             }
 
-            > #search-modal {
-                position: absolute;
-                top: 36px;
-                height: 350px;
-                width: 644px;
-                background: white;
-                z-index: -1;
-                overflow: auto;
-                padding-top: 30px;
-
-                > li {
-                    display: flex;
-                    align-items: center;
-                    text-decoration: none;
-                    height: 60px;
-
-                    > img {
-                        height: 30px;
-                        margin-left: 15px;
-                    }
-
-                    > article {
-                        font-family: Arial, Helvetica, sans-serif;
-                        color: rgb(70, 70, 70);
-                        margin-left: 15px;
-
-                        > div:first-child {
-                            font-size: 16px;
-                        }
-
-                        > div:last-child {
-                            font-size: 12px;
-                            margin-top: 8px;
-                        }
-                        
-                    }
-                    
-                }
-
-                > li:hover {
-                    background-color: rgb(245, 245, 245);
-                    color: #428a13;
-                    cursor: pointer;
-                }
-                
-            }
-
             > img:last-child {
                 height: 40px;
             }
 
             > img:last-child:hover {
                 opacity: 0.75;
+                cursor: pointer;
+            }
+            
+        }
+
+        > #search-modal {
+            position: absolute;
+            z-index: 1;
+            bottom: -138px;
+            height: 350px;
+            width: 644px;
+            background: white;
+            overflow: auto;
+            padding-top: 33px;
+            border-radius: 0px 0px 0px 40px;
+
+            > li {
+                display: flex;
+                align-items: center;
+                text-decoration: none;
+                height: 60px;
+
+                > img {
+                    height: 30px;
+                    margin-left: 15px;
+                }
+
+                > article {
+                    font-family: Arial, Helvetica, sans-serif;
+                    color: rgb(70, 70, 70);
+                    margin-left: 15px;
+
+                    > div:first-child {
+                        font-size: 16px;
+                    }
+
+                    > div:last-child {
+                        font-size: 12px;
+                        margin-top: 8px;
+                    }
+                    
+                }
+                
+            }
+
+            > li:hover {
+                background-color: rgb(232, 232, 232);
+                color: #428a13;
                 cursor: pointer;
             }
             
