--- a/app/assets/stylesheets/api/home.scss
+++ b/app/assets/stylesheets/api/home.scss
@@ -93,7 +93,7 @@
                 padding-top: 37px;
                 border-radius: 0px 0px 0px 40px;
     
-                > li {
+                > a {
                     display: flex;
                     align-items: center;
                     text-decoration: none;
@@ -122,7 +122,7 @@
                     
                 }
     
-                > li:hover {
+                > a:hover {
                     background-color: rgb(232, 232, 232);
                     color: #428a13;
                     cursor: pointer;
