--- a/app/assets/stylesheets/api/home.scss
+++ b/app/assets/stylesheets/api/home.scss
@@ -98,6 +98,9 @@
                     align-items: center;
                     text-decoration: none;
                     height: 60px;
+                    border-bottom: 0.25px solid rgba(190, 190, 190, 0.25);
+                    color: rgb(70, 70, 70);
+                    font-family: Arial, Helvetica, sans-serif;
     
                     > img {
                         height: 30px;
@@ -105,8 +108,6 @@
                     }
     
                     > article {
-                        font-family: Arial, Helvetica, sans-serif;
-                        color: rgb(70, 70, 70);
                         margin-left: 15px;
     
                         > div:first-child {
@@ -134,7 +135,7 @@
         
     }
 
-    #trails {
+    #trail-cards {
 
     }
     
