--- a/app/assets/stylesheets/api/home.scss
+++ b/app/assets/stylesheets/api/home.scss
@@ -161,15 +161,20 @@
     
             > #cards {
                 display: flex;
+                justify-content: space-around;
                 overflow: auto;
                 height: 350px;  
     
                 > article {
-    
+                    border: 1px solid black;
+                    height: 300px;
+                    width: 300px;
+                    
                     > a {
-    
+
                         > img {
-                            
+                            height: 100px;
+                            width: 100px;
                         }
                         
                     }
