Add second row of cards on home

--- a/app/assets/stylesheets/api/home.scss
+++ b/app/assets/stylesheets/api/home.scss
@@ -159,7 +159,7 @@
                 
             }
     
-            > #cards {
+            > .cards {
                 display: flex;
                 justify-content: space-around;
                 height: 350px;
