--- a/app/assets/stylesheets/api/trail_page.scss
+++ b/app/assets/stylesheets/api/trail_page.scss
@@ -18,6 +18,11 @@
     
             > div {
                 font-size: 12px;
+
+                > span {
+                    margin-right: 12px;
+                }
+
             }
     
             #search-container {
