--- a/app/assets/stylesheets/api/trail_page.scss
+++ b/app/assets/stylesheets/api/trail_page.scss
@@ -82,38 +82,36 @@
                 > #search-modal {
                     position: absolute;
                     z-index: 1;
-                    top: 60px;
+                    top: 37px;
                     max-height: 350px;
-                    width: 644px;
+                    width: 300px;
                     background: white;
                     overflow-y: scroll;
-                    padding-top: 37px;
-                    border-radius: 0px 0px 0px 40px;
+                    border: 1px solid rgb(220, 220, 220);
         
                     > a {
                         display: flex;
                         align-items: center;
                         text-decoration: none;
-                        height: 60px;
+                        height: 40px;
                         border-bottom: 0.25px solid rgba(190, 190, 190, 0.25);
                         color: rgb(70, 70, 70);
                         font-family: Arial, Helvetica, sans-serif;
         
                         > img {
-                            height: 30px;
-                            margin-left: 15px;
+                            height: 20px;
+                            margin-left: 10px;
                         }
         
                         > article {
-                            margin-left: 15px;
+                            margin-left: 10px;
         
                             > div:first-child {
-                                font-size: 16px;
+                                font-size: 14px;
                             }
         
                             > div:last-child {
-                                font-size: 12px;
-                                margin-top: 8px;
+                                display: none;
                             }
                             
                         }
@@ -121,9 +119,14 @@
                     }
         
                     > a:hover {
-                        background-color: rgb(232, 232, 232);
-                        color: #428a13;
+                        color: rgb(232, 232, 232);
+                        background-color: #52a917;
                         cursor: pointer;
+
+                        > img {
+                            filter: invert(100%);
+                        }
+                        
                     }
                     
                 }
