Fix marker icon color in search bar

--- a/app/assets/stylesheets/api/home.scss
+++ b/app/assets/stylesheets/api/home.scss
@@ -111,6 +111,7 @@
                     > img {
                         height: 30px;
                         margin-left: 15px;
+                        filter: hue-rotate(70deg);
                     }
     
                     > article {
