--- a/app/assets/stylesheets/api/trail_page.scss
+++ b/app/assets/stylesheets/api/trail_page.scss
@@ -149,20 +149,67 @@
                 object-position: center;
             }
 
-            > div:nth-child(1) {
+            > div {
                 position: absolute;
-                bottom: 0;
                 z-index: 1;
-                background: white;
+                background: rgba(0, 0, 0, 0.4);
+                display: flex;
+                align-items: flex-end;
+                justify-content: space-between;
+                width: 100%;
+                height: 100%;
+
+                > div {
+                    color: white;
+                    font-family: Arial, Helvetica, sans-serif;
+                    margin: 0px 0px 50px 35px;
+                    
+                    > p:nth-child(1) {
+                        font-size: 24px;
+                        font-weight: bold;
+                        margin-bottom: 15px;
+                    }
+
+                    > p:nth-child(2) {
+
+                        > span {
+                            border-radius: 6px;
+                            padding: 2px 8px 4px 8px;
+                            color: white;
+                            margin-right: 2px;
+                        }
+                        
+                        > .easy {
+                            background-color: #428a13;
+                        }
+
+                        > .moderate {
+                            background-color: rgb(0, 180, 255);
+                        }
+
+                        > .hard {
+                            background-color: rgb(80, 80, 80);
+                        }
+                        
+                    }
+                    
+                }
+
+                > #star {
+                    height: 40px;
+                    width: 40px;
+                    margin: 0px 35px 50px 0px;
+                    transition: all 0.1s ease-in-out;
+                    filter: invert(100%);
+                }
+    
+                > #star:hover {
+                    transform: scale(1.1);
+                    cursor: pointer;
+                }
+
             }
 
-            > div:nth-child(2) {
-                position: absolute;
-                bottom: 0;
-                right: 0;
-                z-index: 1;
-                background: white;
-            }
             
         }
 
