Add css for positioning of trail details comp and nearby trails comp

--- a/app/assets/stylesheets/api/trail_page.scss
+++ b/app/assets/stylesheets/api/trail_page.scss
@@ -212,6 +212,19 @@
             
         }
 
+        > section {
+            display: flex;
+
+            #trail-details {
+                flex-grow: 1;
+            }
+
+            #nearby-trails {
+                
+            }
+            
+        }
+
     }
 
     
