Add commented structure to trail detail comp

--- a/app/assets/stylesheets/api/trail_page.scss
+++ b/app/assets/stylesheets/api/trail_page.scss
@@ -220,7 +220,7 @@
             }
 
             #nearby-trails {
-                
+                background: yellow;
             }
             
         }
