Adjust trail img shadow cover

--- a/app/assets/stylesheets/api/trail_page.scss
+++ b/app/assets/stylesheets/api/trail_page.scss
@@ -152,7 +152,7 @@
             > div {
                 position: absolute;
                 z-index: 1;
-                background: rgba(0, 0, 0, 0.4);
+                background: linear-gradient(#ffffff00, #00000099);
                 display: flex;
                 align-items: flex-end;
                 justify-content: space-between;
