--- a/app/assets/stylesheets/api/trail_page.scss
+++ b/app/assets/stylesheets/api/trail_page.scss
@@ -244,6 +244,10 @@
                     }
                     
                 }
+
+                > #weather-widget {
+                    
+                }
                 
             }
 
