--- a/app/assets/stylesheets/api/trail_page.scss
+++ b/app/assets/stylesheets/api/trail_page.scss
@@ -246,7 +246,23 @@
                 }
 
                 > #weather-widget {
-                    
+                    > section:first-child {
+                        > h2 {
+
+                        }
+                    }
+
+                    > section:last-child {
+                        display: flex;
+                        align-items: center;
+                        justify-content: space-around;
+
+                        > article {
+                            display: flex;
+                            flex-direction: column;
+                            align-items: center;
+                        }
+                    }
                 }
                 
             }
