--- a/app/assets/stylesheets/api/trail_page.scss
+++ b/app/assets/stylesheets/api/trail_page.scss
@@ -247,8 +247,18 @@
 
                 > #weather-widget {
                     > section:first-child {
+                        background: #f0f0f0;
+                        height: 8px;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        padding: 24px;
+                        border-top: 1px solid #c8c8c8;
+                        
                         > h2 {
-
+                            color: #428a13;
+                            font-size: 18px;
+                            font-weight: bold;
                         }
                     }
 
@@ -261,6 +271,20 @@
                             display: flex;
                             flex-direction: column;
                             align-items: center;
+                            height: 90px;
+                            padding: 24px;
+
+                            > h6 {
+                                font-size: 15px;
+                            }
+
+                            > img {
+                                height: 60px;
+                            }
+
+                            > p {
+                                font-size: 15px;
+                            }
                         }
                     }
                 }
