--- a/app/assets/stylesheets/api/footer.scss
+++ b/app/assets/stylesheets/api/footer.scss
@@ -2,6 +2,7 @@ footer {
     display: flex;
     align-items: center;
     justify-content: center;
+    // font-family:Verdana, Geneva, Tahoma, sans-serif;
     
     > section:first-child {
         display: flex;
@@ -12,7 +13,6 @@ footer {
         > p {
             font-size: 20px;
             font-weight: bold;
-            font-family:Verdana, Geneva, Tahoma, sans-serif;
 
             > span {
                 color: #428a13;
