--- a/app/assets/stylesheets/api/header.scss
+++ b/app/assets/stylesheets/api/header.scss
@@ -1,4 +1,5 @@
 header {
+    // font-family: Arial, Helvetica, sans-serif;
     animation: loadImg 1 5s;
     background-size: 0%;
 
@@ -20,7 +21,6 @@ header {
         width: 100%;
         height: 65px;
         font-weight: bold;
-        font-family: Arial, Helvetica, sans-serif;
         background-color: white;
         box-shadow: 0 0 1px 0px rgb(211, 211, 211);
         position: fixed;
@@ -108,7 +108,6 @@ header {
 
                 > a {
                     color: rgb(148, 148, 148);
-                    font-family: Arial, Helvetica, sans-serif;
                     font-weight: 5;
                     font-size: 20px;
                     padding: 15px;
