--- a/app/assets/stylesheets/api/trail_page.scss
+++ b/app/assets/stylesheets/api/trail_page.scss
@@ -5,7 +5,6 @@
     align-items: center;
     background: rgb(240, 240, 240);
     color: rgb(75, 75, 75);
-    font-family: Arial, Helvetica, sans-serif;
     
     > div {
         width: 1000px;
@@ -98,7 +97,6 @@
                         height: 40px;
                         border-bottom: 0.25px solid rgba(190, 190, 190, 0.25);
                         color: rgb(70, 70, 70);
-                        font-family: Arial, Helvetica, sans-serif;
         
                         > img {
                             filter: hue-rotate(70deg);
@@ -123,7 +121,7 @@
         
                     > a:hover {
                         background-color: #52a917;
-                        color: rgb(232, 232, 232);
+                        color: white;
                         cursor: pointer;
 
                         > img {
@@ -163,7 +161,6 @@
 
                 > div {
                     color: white;
-                    font-family: Arial, Helvetica, sans-serif;
                     margin: 0px 0px 50px 35px;
                     
                     > p:nth-child(1) {
@@ -246,6 +243,7 @@
                 }
 
                 > #weather-widget {
+
                     > section:first-child {
                         background: #f0f0f0;
                         height: 8px;
@@ -257,9 +255,10 @@
                         
                         > h2 {
                             color: #428a13;
-                            font-size: 18px;
+                            font-size: 22px;
                             font-weight: bold;
                         }
+
                     }
 
                     > section:last-child {
@@ -285,8 +284,11 @@
                             > p {
                                 font-size: 15px;
                             }
+
                         }
+
                     }
+
                 }
                 
             }
