--- a/app/assets/stylesheets/reset.css
+++ b/app/assets/stylesheets/reset.css
@@ -1,3 +1,8 @@
+@font-face {
+	font-family: 'Proxima Nova';
+	src: url('Proxima_Nova_Font.otf');
+}
+
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -25,6 +30,7 @@ time, mark, audio, video {
 }
 body {
 	line-height: 1;
+	font-family: "Proxima Nova"
 }
 ol, ul {
 	list-style: none;
