Add css to map to make visible

--- a/app/assets/stylesheets/api/trail_page.scss
+++ b/app/assets/stylesheets/api/trail_page.scss
@@ -241,6 +241,10 @@
                     }
                     
                 }
+                
+                > #map-container {
+                    height: 500px;
+                }
 
                 > #weather-widget {
 
