--- a/app/assets/stylesheets/api/trail_page.scss
+++ b/app/assets/stylesheets/api/trail_page.scss
@@ -223,7 +223,6 @@
                     display: flex;
                     align-items: center;
                     padding: 30px;
-                    border-bottom: 1px solid rgb(200, 200, 200);
 
                     > div {
                         flex-grow: 1;
@@ -242,8 +241,37 @@
                     
                 }
                 
-                > #map-container {
-                    height: 500px;
+                > #map {
+
+                    > section:first-child {
+                        background: #f0f0f0;
+                        height: 8px;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        padding: 24px;
+                        border-top: 1px solid #c8c8c8;
+                        
+                        > h2 {
+                            color: #428a13;
+                            font-size: 22px;
+                            font-weight: bold;
+                        }
+
+                    }
+
+                    > section:last-child {
+                        display: flex;
+                        align-items: center;
+                        padding: 25px;
+
+                        > #map-container {
+                            height: 300px;
+                            width: 100%;
+                            border-radius: 15px;
+                        }
+                    }
+                    
                 }
 
                 > #weather-widget {
