--- a/app/assets/stylesheets/api/trail_page.scss
+++ b/app/assets/stylesheets/api/trail_page.scss
@@ -329,7 +329,7 @@
 
                     }
 
-                    > section:last-child {
+                    > section:nth-child(2) {
 
                         > article {
 
@@ -347,10 +347,12 @@
                                 > p {
                                     position: absolute;
                                     opacity: 0;
-                                    transition: opacity 0.5s ease-in-out;
+                                    top: 50px;
+                                    transition: all 0.75s ease-in-out;
                                 }
 
                                 > p.flash {
+                                    top: 25px;
                                     opacity: 1;
                                 }
                                 
