--- a/app/assets/stylesheets/api/trail_page.scss
+++ b/app/assets/stylesheets/api/trail_page.scss
@@ -16,6 +16,7 @@
             height: 50px;
             position: relative; 
             z-index: 2;
+            padding-left: 12px;
     
             > div {
                 font-size: 12px;
