--- a/app/assets/stylesheets/api/trail_page.scss
+++ b/app/assets/stylesheets/api/trail_page.scss
@@ -346,6 +346,9 @@
                     > section:nth-child(2) {
 
                         > article {
+                            display: flex;
+                            justify-content: space-around;
+                            align-items: center;
 
                             > div:first-child {
 
@@ -355,7 +358,20 @@
                                 position: relative;
 
                                 > button {
+                                    border: none;
+                                    background: #428a13;
+                                    border-radius: 50px;
+                                    padding: 10px;
+                                    height: 50px;
+                                    width: 170px;
+                                    font-size: 16px;
+                                    font-weight: bold;
+                                    color: white;
+                                }
 
+                                > button:hover {
+                                    opacity: 0.85;
+                                    cursor: pointer;
                                 }
 
                                 > p {
