--- a/app/assets/stylesheets/api/trail_page.scss
+++ b/app/assets/stylesheets/api/trail_page.scss
@@ -351,7 +351,31 @@
                             align-items: center;
 
                             > div:first-child {
+                                display: flex;
+                                flex-direction: column;
+                                align-items: center;
 
+                                > div {
+                                    display: flex;
+                                    align-items: flex-end;
+                                    margin-top: 10px;
+
+                                    > img {
+                                        height: 50px;
+                                    }
+
+                                    > span {
+                                        font-weight: bold;
+                                        font-size: 45px;
+                                    }
+
+                                }
+
+                                > p {
+                                    font-size: 14px;
+                                    margin: 10px;
+                                }
+                                
                             }
 
                             > div:last-child {
